[gd_scene load_steps=2 format=3 uid="uid://yvsn7uocc0jl"]

[ext_resource type="Script" uid="uid://b2718rjn62d7a" path="res://scripts/ui.gd" id="1_nt7q6"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_nt7q6")

[node name="Panel" type="Panel" parent="."]
offset_right = 300.0
offset_bottom = 100.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_right = 100.0
offset_bottom = 100.0

[node name="HealthLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="ScoreLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="AmmoLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
